--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "graphql-practice",
-    "version": "0.0.0",
+    "version": "1.0.0",
     "description": "Educational project to use graphQL technology.",
     "repository": {
         "type": "git",
@@ -16,6 +16,7 @@
         "ejs": "~2.5.7",
         "express": "~4.16.0",
         "express-graphql": "^0.7.1",
+        "got": "^9.6.0",
         "graphql": "^14.1.1",
         "http-errors": "~1.6.2",
         "morgan": "~1.9.0",
